@@ -7,7 +7,6 @@ package com.luvina.la.controller;
 
 import com.luvina.la.config.Constants;
 import com.luvina.la.config.MessageConstants;
-import com.luvina.la.payload.EmployeeDetailResponse;
 import com.luvina.la.payload.EmployeeListResponse;
 import com.luvina.la.payload.EmployeeRegisterResponse;
 import com.luvina.la.payload.EmployeeRequest;
@@ -15,18 +14,13 @@ import com.luvina.la.payload.MessageResponse;
 import com.luvina.la.service.EmployeeService;
 import com.luvina.la.validation.ValidateUtil;
 import lombok.RequiredArgsConstructor;
-import org.springframework.http.HttpStatus;
-import org.springframework.web.bind.annotation.DeleteMapping;
 import org.springframework.web.bind.annotation.GetMapping;
-import org.springframework.web.bind.annotation.PathVariable;
 import org.springframework.web.bind.annotation.PostMapping;
-import org.springframework.web.bind.annotation.PutMapping;
 import org.springframework.web.bind.annotation.RequestBody;
 import org.springframework.web.bind.annotation.RequestMapping;
 import org.springframework.web.bind.annotation.RequestParam;
 import org.springframework.web.bind.annotation.RestController;
 
-import java.util.Arrays;
 import java.util.Collections;
 import java.util.List;
 
@@ -35,6 +29,9 @@ import java.util.List;
  *
  * Chức năng chính:
  * - Lấy danh sách nhân viên (search, sort, paging)
+ * - Kiểm tra trùng login ID
+ * - Kiểm tra tồn tại department / certification
+ * - Thêm mới nhân viên
  *
  * Validate được thực hiện tại đây (Controller) trước khi gọi Service.
  * Nếu dữ liệu không hợp lệ, trả về response lỗi ngay (không gọi Service).
@@ -81,19 +78,19 @@ public class EmployeeController {
         if (!validateUtil.isValidOrder(ordEmployeeName)
                 || !validateUtil.isValidOrder(ordCertificationName)
                 || !validateUtil.isValidOrder(ordEndDate)) {
-            return buildErrorResponse(MessageConstants.ER021, Collections.emptyList());
+            return EmployeeListResponse.badRequest(MessageConstants.ER021, Collections.emptyList());
         }
 
         // Validate offset phải là số nguyên >= 0 (ER018)
         // Nếu offset không phải số nguyên hợp lệ -> trả về lỗi ER018 với tham số "オフセット"
         if (!validateUtil.isNonNegativeInteger(offset)) {
-            return buildErrorResponse(MessageConstants.ER018, Arrays.asList(Constants.OFFSET));
+            return EmployeeListResponse.badRequest(MessageConstants.ER018, List.of(Constants.OFFSET));
         }
 
         // Validate limit phải là số nguyên >= 0 (ER018)
         // Nếu limit không phải số nguyên hợp lệ -> trả về lỗi ER018 với tham số "リミット"
         if (!validateUtil.isNonNegativeInteger(limit)) {
-            return buildErrorResponse(MessageConstants.ER018, Arrays.asList(Constants.LIMIT));
+            return EmployeeListResponse.badRequest(MessageConstants.ER018, List.of(Constants.LIMIT));
         }
 
         // Parse offset/limit từ String sang Integer
@@ -114,16 +111,9 @@ public class EmployeeController {
     * */
     @GetMapping("/check-employee-login-id")
     public EmployeeRegisterResponse checkEmployeeLoginId(@RequestParam("loginId") String employeeLoginId) {
-        EmployeeRegisterResponse response = new EmployeeRegisterResponse();
-        if (employeeService.existsByEmployeeLoginId(employeeLoginId)) {
-            response.setCode(HttpStatus.BAD_REQUEST.value());
-            response.setMessage(new MessageResponse(
-                    MessageConstants.ER003, List.of("アカウント名")
-            ));
-        } else {
-            response.setCode(HttpStatus.OK.value());
-        }
-        return response;
+        return employeeService.existsByEmployeeLoginId(employeeLoginId)
+                ? EmployeeRegisterResponse.badRequest(MessageConstants.ER003, List.of("アカウント名"))
+                : EmployeeRegisterResponse.ok();
     }
 
     @GetMapping("/validate-refs")
@@ -131,44 +121,13 @@ public class EmployeeController {
             @RequestParam(value = "departmentId", required = false) Long departmentId,
             @RequestParam(value = "certificationId", required = false) Long certificationId
     ) {
-        EmployeeRegisterResponse response = new EmployeeRegisterResponse();
         MessageResponse error = employeeService.validateRefs(departmentId, certificationId);
 
-        if (error != null) {
-            response.setCode(HttpStatus.BAD_REQUEST.value());
-            response.setMessage(error);
-        } else {
-            response.setCode(HttpStatus.OK.value());
-        }
-        return response;
+        return error != null
+                ? EmployeeRegisterResponse.badRequest(error)
+                : EmployeeRegisterResponse.ok();
     }
 
-
-
-
-
-
-
-
-
-
-    /**
-     * API lấy chi tiết 1 nhân viên theo employee_id (ADM003 / khởi tạo ADM004).
-     *
-     * URL: GET /employee/{employeeId}
-     *
-     * Các trường hợp:
-     *  - Thành công (200): trả về toàn bộ thông tin + danh sách chứng chỉ
-     *  - Không tồn tại / là admin: ER013 (500)
-     *  - Lỗi hệ thống: ER015 (500)
-     *
-     * @param employeeId ID nhân viên
-     * @return EmployeeDetailResponse chứa dữ liệu hoặc thông báo lỗi
-     */
-    @GetMapping("/{employeeId}")
-    public EmployeeDetailResponse getEmployeeDetail(@PathVariable("employeeId") Long employeeId) {
-        return employeeService.getEmployeeDetail(employeeId);
-    }
 
     /**
      * API thêm mới nhân viên (ADM005 -> ADM006).
@@ -179,33 +138,4 @@ public class EmployeeController {
         return employeeService.addEmployee(request);
     }
 
-    /**
-     * API cập nhật nhân viên (ADM005 -> ADM006).
-     * employeeId phải có trong body; loginId không được đổi; password rỗng -> giữ nguyên.
-     */
-    @PutMapping
-    public EmployeeRegisterResponse updateEmployee(@RequestBody EmployeeRequest request) {
-        return employeeService.updateEmployee(request);
-    }
-
-    /**
-     * API xoá nhân viên. ER014 nếu không tồn tại, ER020 nếu là admin.
-     */
-    @DeleteMapping("/{employeeId}")
-    public EmployeeRegisterResponse deleteEmployee(@PathVariable("employeeId") Long employeeId) {
-        return employeeService.deleteEmployee(employeeId);
-    }
-
-    /**
-     * Tạo response lỗi validate tại Controller với HTTP status 500.
-     * @param errorCode Mã lỗi
-     * @param params    Danh sách tham số thay thế vào message template
-     * @return EmployeeListResponse với code = "500" và thông tin lỗi
-     */
-    private EmployeeListResponse buildErrorResponse(String errorCode, List<String> params) {
-        EmployeeListResponse response = new EmployeeListResponse();
-        response.setCode(HttpStatus.INTERNAL_SERVER_ERROR.value());
-        response.setMessage(new MessageResponse(errorCode, params));
-        return response;
-    }
 }
